--- a/views/index.erb
+++ b/views/index.erb
@@ -2,6 +2,14 @@
 <!DOCTYPE html>
 <html>
   <body>
-      <h2>Welcome!</h2>
+    <h1>Welcome!</h1>
+ 
+    <form action="/greet" method="POST">
+      <label for="user_name">Name:</label>
+     
+      <p><input type="text" name="user_name" id="user_name" /></p>
+     
+      <input type="submit" value="Submit"/>
+    </form>
   </body>
 </html>
