--- a/views/greet.erb
+++ b/views/greet.erb
@@ -1,4 +1,4 @@
 <%# Write your code here! %>
 
 
-<h2>Hi <%=user_name%>, nice to meet you!</h2>
+<h1>Hi <%=params[:user_name]%>, nice to meet you!</h1>
